feat: schema-driven output; add etymology + reference; enforce pinyin/quotes; cap usage to 3; robust verbose + Ctrl-C clean exit; remove dbg logs

--- a/output/1/book/银.input.html
+++ b/output/1/book/银.input.html
@@ -5481,13 +5481,13 @@ Transclusion expansion time report (%,ms,calls,template)
 <li><a href="/wiki/bank" title="bank">bank</a>; <a href="/wiki/cash" title="cash">cash</a>, <a href="/wiki/money" title="money">money</a>, <a href="/wiki/currency" title="currency">currency</a></li></ol>
 <!-- 
 NewPP limit report
-Parsed by mw‐web.codfw.main‐856698dbfc‐x7fnf
-Cached time: 20250823031006
+Parsed by mw‐web.codfw.main‐856698dbfc‐4g8xl
+Cached time: 20250823220844
 Cache expiry: 2592000
 Reduced expiry: false
 Complications: [vary‐revision‐sha1, show‐toc]
-CPU time usage: 3.147 seconds
-Real time usage: 3.957 seconds
+CPU time usage: 3.076 seconds
+Real time usage: 3.950 seconds
 Preprocessor visited node count: 12277/1000000
 Revision size: 15971/2097152 bytes
 Post‐expand include size: 841963/2097152 bytes
@@ -5496,24 +5496,24 @@ Highest expansion depth: 14/100
 Expensive parser function count: 150/500
 Unstrip recursion depth: 0/20
 Unstrip post‐expand size: 11122/5000000 bytes
-Lua time usage: 2.263/10.000 seconds
-Lua memory usage: 79460288/104857600 bytes
+Lua time usage: 2.193/10.000 seconds
+Lua memory usage: 79460928/104857600 bytes
 Number of Wikibase entities loaded: 0/500
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 3278.164      1 -total
- 30.20%  990.054      1 Template:col3
-  8.14%  267.001      4 Template:zh-dial
-  6.27%  205.404      1 Template:also
-  5.19%  170.012      1 Template:character_info
-  4.92%  161.219      1 Template:zh-pron
-  4.62%  151.563     13 Template:no_deprecated_lang_param_usage
-  4.61%  151.158      6 Template:ja-r/multi
-  3.21%  105.310      3 Template:ja-pron
-  2.34%   76.834      1 Template:CJKV
+100.00% 3261.617      1 -total
+ 30.96% 1009.694      1 Template:col3
+  8.13%  265.289      4 Template:zh-dial
+  6.99%  227.853      1 Template:also
+  4.68%  152.513      1 Template:zh-pron
+  4.50%  146.906      6 Template:ja-r/multi
+  4.50%  146.734     13 Template:no_deprecated_lang_param_usage
+  3.23%  105.487      3 Template:ja-pron
+  3.09%  100.626      1 Template:Han_etym
+  2.67%   87.106      2 Template:inh
 -->
-<!-- Saved in parser cache with key enwiktionary:pcache:29454:|#|:idhash:canonical and timestamp 20250823031006 and revision id 85794072. Rendering was triggered because: page-view
+<!-- Saved in parser cache with key enwiktionary:pcache:29454:|#|:idhash:canonical and timestamp 20250823220844 and revision id 85794072. Rendering was triggered because: page-view
  -->
 </link></link></meta></div>
 <div class="printfooter" data-nosnippet="">Retrieved from "<a dir="ltr" href="https://en.wiktionary.org/w/index.php?title=銀&amp;oldid=85794072">https://en.wiktionary.org/w/index.php?title=銀&amp;oldid=85794072</a>"</div></div>
